k8s-componentes-entrega-3.yaml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      restartPolicy: Always
      containers:
        - name: users
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/users:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: users-service
  annotations:
    cloud.google.com/backend-config: '{"default": "users-config"}'
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31017
---
###################################
# RF006
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf006
  labels:
    app: rf006
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf006
  template:
    metadata:
      labels:
        app: rf006
    spec:
      restartPolicy: Always
      containers:
        - name: rf006
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/rf006:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                          
---
kind: Service
apiVersion: v1
metadata:
  name: rf006-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf006-config"}'
spec:
  type: NodePort
  selector:
    app: rf006
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31018
---
###################################
# RF006_POLL
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf006-poll
  labels:
    app: rf006-poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf006-poll
  template:
    metadata:
      labels:
        app: rf006-poll
    spec:
      restartPolicy: Always
      containers:
        - name: rf006-poll
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/rf006_poll:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                      
---
kind: Service
apiVersion: v1
metadata:
  name: rf006-poll-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf006-poll-config"}'
spec:
  type: NodePort
  selector:
    app: rf006-poll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31016
