k8s-new-services-deployment.yaml
###################################
# SCORES
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scores
  labels:
    app: scores
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scores
  template:
    metadata:
      labels:
        app: scores
    spec:
      containers:
        - name: scores
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/scores:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: scores-service
  annotations:
    cloud.google.com/backend-config: '{"default": "scores-config"}'
spec:
  type: NodePort
  selector:
    app: scores
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31021
---
###################################
# RF003
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf003
  labels:
    app: rf003
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf003
  template:
    metadata:
      labels:
        app: rf003
    spec:
      containers:
        - name: rf003
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/rf003:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                  
---
kind: Service
apiVersion: v1
metadata:
  name: rf003-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf003-config"}'
spec:
  type: NodePort
  selector:
    app: rf003
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31022
---
###################################
# RF004
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf004
  labels:
    app: rf004
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf004
  template:
    metadata:
      labels:
        app: rf004
    spec:
      containers:
        - name: rf004
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/rf004:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                  
---
kind: Service
apiVersion: v1
metadata:
  name: rf004-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf004-config"}'
spec:
  type: NodePort
  selector:
    app: rf004
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31023
---
###################################
# RF005
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rf005
  labels:
    app: rf005
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rf005
  template:
    metadata:
      labels:
        app: rf005
    spec:
      containers:
        - name: rf005
          image: us-central1-docker.pkg.dev/s202314-proyecto-grupo8/misw-native-microservices-app/rf005:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                  
---
kind: Service
apiVersion: v1
metadata:
  name: rf005-service
  annotations:
    cloud.google.com/backend-config: '{"default": "rf005-config"}'
spec:
  type: NodePort
  selector:
    app: rf005
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31024
