k8s-true-native-deployment.yaml
###################################
# USERS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truenative
  labels:
    app: truenative
spec:
  replicas: 1
  selector:
    matchLabels:
      app: truenative
  template:
    metadata:
      labels:
        app: truenative
    spec:
      containers:
        - name: truenative
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/true-native:2.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: truenative-service
  annotations:
    cloud.google.com/backend-config: '{"default": "truenative-config"}'
spec:
  type: NodePort
  selector:
    app: truenative
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31020
