k8s-ingress-deloyment.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-grupo8-k8s
  labels:
    name: gateway-ingress-grupo8-k8s
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port: 
              number: 80
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-service
            port: 
              number: 80
      - path: /routes
        pathType: Prefix
        backend:
          service:
            name: routes-service
            port: 
              number: 80
      - path: /offers
        pathType: Prefix
        backend:
          service:
            name: offers-service
            port: 
              number: 80
      - path: /scores
        pathType: Prefix
        backend:
          service:
            name: scores-service
            port: 
              number: 80
      - path: /rf003
        pathType: Prefix
        backend:
          service:
            name: rf003-service
            port: 
              number: 80
      - path: /rf004
        pathType: Prefix
        backend:
          service:
            name: rf004-service
            port: 
              number: 80  
      - path: /rf005
        pathType: Prefix
        backend:
          service:
            name: rf005-service
            port: 
              number: 80
